--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/login"
-        android:title="Login"
+        android:id="@+id/share"
+        android:title="Share"
         app:showAsAction="always" />
 
 </menu>
